--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,10 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.material3:material3:1.0.0-rc01"
     implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.compose.ui:ui-text-google-fonts:1.4.0"
+    implementation "androidx.fragment:fragment-ktx:1.5.5"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
