--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-text-google-fonts:1.4.0"
     implementation "androidx.fragment:fragment-ktx:1.5.5"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
